# weather-forecaster

./: .env.example  .gitignore  Cargo.toml  README.md
src/: env.rs  main.rs  provider_serde.rs  structures.rs  traits.rs
src/providers/: mod.rs  openweather.rs  weatherapi.rs
